<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello" translatable="false"></string>
    <string name="app_name">Lunar4Google</string>
    <string name="entrydata_name">Append Schedule</string>
    <string name="deletedata_name">Update Delete</string>
    <string name="CalendarRead_name">Calendar Refence</string>
    <string name="CalendarView_name">Search Today Schedule</string>
    <string name="CalendarWrite_name">Calendar Save</string>
    <string name="LunarOption_name">Option View</string>
    <string name="lable_sdate">Start Date</string>
    <string name="label_time" translatable="false">12:00</string>
    <string name="label_edate">End Date</string>
    <string name="label_mesg">Event</string>
    <string name="label_ok" translatable="false">OK</string>
    <string name="label_emsg_title">Entry a Subject</string>
    <string name="label_save_btn">Save</string>
    <string name="label_cancel_btn">Cancel</string>
    <string name="label_lunar">Lunar</string>
    <string name="label_solra">Solra</string>
    <string name="label_leap">Leap</string>
    <string name="label_btn_plus" translatable="false">+</string>
    <string name="label_btn_minus" translatable="false">-</string>
    <string name="label_entry_subject">Entry a Subject</string>
    <string name="label_entryname">Entry a Name for Call</string>
    <string name="label_entryMobilNo">Entry a PhoneNumber</string>
    <string name="label_date">Date</string>
    <string name="label_yymmdd">MM.dd.yyyy(E)</string>
    <string name="label_lunar2">[Lunar)</string>
    <string name="label_notify">Information!!!</string>
    <string name="label_mesg_not_sync">The schedule is not synchronized with Google !!!</string>
    <string name="label_btn_continue">Continue</string>
    <string name="label_leap_solar">(Leap)[Solar)</string>
    <string name="label_leap_lunar">(Leap,Lunar)</string>
    <string name="label_solar">solra)</string>
    <string name="label_solra2">[solra)</string>
    <string name="label_menu_append">Append Schedule</string>
    <string name="label_menu_sync_schedule">Sync Schedule</string>
    <string name="label_menu_about">About App\'s</string>
    <string name="label_menu_get_schedule">Get Schedule</string>
    <string name="label_menu_today">Today Schedule</string>
    <string name="label_menu_backup">Backup Data</string>
    <string name="label_menu_restore">Restore Data</string>
    <string name="label_menu_set_alarm_time">Set Option</string>
    <string name="label_menu_test_alarm">Test Alarm</string>
    <string name="label_mesg_1">HomePage URL :</string>
    <string name="label_mesg_2">This program converts the lunar calendar into a lift and registers it on the schedule.</string>
    <string name="label_mesg_3">Please send comments to improve 6k2emg@gmail.com !!!</string>
    <string name="label_mesg_4">Icon authorship</string>
    <string name="label_close">Close</string>
    <string name="label_not_used_backup">Unable to use backup device …</string>
    <string name="label_backup_data">Back up your data …</string>
    <string name="label_backup_complete">Backup is complete.</string>
    <string name="label_backup_error">Error during backup.</string>
    <string name="label_restore_data">Restore Data</string>
    <string name="label_restore_no_data">No Data !!!</string>
    <string name="label_restore_not_read">The data to restore can not be read</string>
    <string name="label_restore_complete">Data restoration is complete. Quit the program and run it again !!!</string>
    <string name="label_restore_error">Error restoring data.</string>
    <string name="label_sync">sync</string>
    <string name="label_no_sync" translatable="false">...</string>
    <string name="label_msg_get_calendar">Importing Schedule from the Your Calendar is now done !!!</string>
    <string name="label_read_calendar">Read Calendar</string>
    <string name="label_msg_read_calendar">May I read your calendar ?</string>
    <string name="label_msg_write_calendar">Written completed in the Calendar.</string>
    <string name="label_write_calendar">Write Calendar</string>
    <string name="label_msg_delete_calendar">Delete Completed on the Calendar</string>
    <string name="label_delete_calendar">Delete Calendar</string>
    <string name="label_sync_calendar">Sync Calendar</string>
    <string name="label_sync_start">Start calendar syncing?</string>
    <string name="label_confirm_delete">Confirm Deletion</string>
    <string name="label_msg_delete">The deleted data can not be restored. Do you want to delete ???</string>
    <string name="label_completed_SMS">Completed Send to Message</string>
    <string name="label_not_found_phone">Not Found Phone Number</string>
    <string name="label_invalid_phone_no">Invalid phone number.</string>
    <string name="label_menu_sms">SMS Send</string>
    <string name="label_msg_pay_sms">Pay send a SMS ???</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5706840078904135~8666998632</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-5706840078904135/2101590289</string>
    <string name="banner_ad_unit_id_for_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="msgBackup">Backup Execute.</string>
    <string name="msgBackupCompiled">Backup Complied</string>
    <string name="msgNotBackup">Error for Backup</string>
    <string name="label_restore">Restore Execute</string>
    <string name="mesg_restore_err">Error for Restore</string>
    <string name="mesg_restore_ok">Restore Compiled</string>
    <string name="label_title_alarm_set">Select on Alram TIme</string>
    <string name="label_standard_time">Standard Hour</string>
    <string name="label_save">Save</string>
    <string name="label_google_calendar">Google Account</string>
    <string name="label_delete">Delete</string>
    <string name="label_sms_send">SMS Send</string>
    <string name="label_finish_apps">press Back once for Finish</string>
    <string name="labelSun">Sun</string>
    <string name="labelMon">Mon</string>
    <string name="labelTue">Tue</string>
    <string name="labelWed">Wed</string>
    <string name="labelThr">Thr</string>
    <string name="labelFri">Fri</string>
    <string name="labelSat">Sat</string>
    <string name="strDescript" translatable="false">TODO</string>
    <string name="labelTItle">Title</string>
    <string name="label_entry_date">Enter Date of Year</string>
    <string name="label_menu_month">Monthly Calendar</string>
    <string name="msg_click_more">Clieck Again !!!</string>
    <string name="msg_getToday">goto Today</string>
    <string name="mesg_title_alarm">Alert Message</string>
    <string name="mesg_not_googleId">Don\'t found Google Id</string>

</resources>
