<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="center_horizontal"
	android:orientation="vertical"
	android:weightSum="8">

	<EditText
		android:id="@+id/entrySubject"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:scrollHorizontally="true"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:text="@string/label_entry_subject"
		android:textSize="15dip" />

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="15"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sYear_up"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="20"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_plus" />

		<TextView
			android:id="@+id/textView1"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sMon_up"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_plus" />

		<TextView
			android:id="@+id/textView2"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sDay_up"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_plus" />

		<TextView
			android:id="@+id/textView3"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="3"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sHour_up"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_plus" />

		<TextView
			android:id="@+id/textView4"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sMin_up"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_plus" />

	</LinearLayout>


	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:gravity="center_horizontal|center_vertical"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView5"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="15"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_date"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/entry_sYear"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="20"
			android:ellipsize="none"
			android:gravity="center_horizontal|center_vertical"
			android:inputType="date"
			android:isScrollContainer="false"
			android:nextFocusDown="@+id/entry_sMon"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:text="2012" />

		<TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text="-"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/entry_sMon"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:ellipsize="none"
			android:gravity="center_horizontal|center_vertical"
			android:inputType="date"
			android:isScrollContainer="false"
			android:nextFocusDown="@+id/entry_sDay"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:text="01" />

		<TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text="-"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/entry_sDay"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:ellipsize="none"
			android:gravity="center_horizontal|center_vertical"
			android:inputType="date"
			android:isScrollContainer="false"
			android:nextFocusDown="@+id/entry_sHour"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:text="01" />

		<TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="3"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/entry_sHour"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:inputType="time"
			android:isScrollContainer="false"
			android:nextFocusDown="@+id/entry_sMin"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:text="12" />

		<TextView
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=":"
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<EditText
			android:id="@+id/entry_sMin"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:inputType="time"
			android:isScrollContainer="false"
			android:nextFocusDown="@+id/entryName"
			android:selectAllOnFocus="true"
			android:singleLine="true"
			android:text="10" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:orientation="horizontal">

		<TextView
			android:id="@+id/textView6"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="15"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sYear_down"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="20"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_minus" />

		<TextView
			android:id="@+id/textView7"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sMon_down"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_minus" />

		<TextView
			android:id="@+id/textView8"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sDay_down"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_minus" />

		<TextView
			android:id="@+id/textView9"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="3"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sHour_down"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_minus" />

		<TextView
			android:id="@+id/textView10"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="2"
			android:gravity="center_horizontal|center_vertical"
			android:text=" "
			android:textAppearance="?android:attr/textAppearanceLarge" />

		<Button
			android:id="@+id/btn_sMin_down"
			android:layout_width="0dip"
			android:layout_height="match_parent"
			android:layout_weight="14"
			android:gravity="center_horizontal|center_vertical"
			android:text="@string/label_btn_minus" />

	</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_centerVertical="true"
		android:layout_weight="1"
		android:orientation="horizontal">

		<RadioGroup
			android:id="@+id/RadioGroup01"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_weight="100"
			android:orientation="horizontal">

			<RadioButton
				android:id="@+id/selectLunar"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="50"
				android:checked="true"
				android:gravity="center|center_horizontal|center_vertical"
				android:text="@string/label_lunar" />

			<RadioButton
				android:id="@+id/selectSolra"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="50"
				android:text="@string/label_solra" />

			<CheckBox
				android:id="@+id/chk_lunar"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:layout_weight="50"
				android:text="@string/label_leap" />
		</RadioGroup>
	</LinearLayout>

	<EditText
		android:id="@+id/entryName"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:scrollHorizontally="true"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:text="@string/label_entryname"
		android:textSize="15dip" />

	<EditText
		android:id="@+id/entryMobilNo"
		android:layout_width="fill_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:inputType="phone"
		android:scrollHorizontally="true"
		android:selectAllOnFocus="true"
		android:singleLine="true"
		android:text="@string/label_entryMobilNo"
		android:textSize="15dip" />

	<Button
		android:id="@+id/save_btn"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="1"
		android:text="@string/label_save"
		android:textSize="15dip" />

</LinearLayout>
